31102002.bitsy.txt.err
cc1plus: warning: type qualifiers ignored on function return type [-Wignored-qualifiers]
cc1plus: warning: type qualifiers ignored on function return type [-Wignored-qualifiers]
In file included from ../main.cpp:22:0:
../bitsy.h:1338:1: error: conversion from 'bool' to 'Constant' is ambiguous
 };
 ^
In file included from ../main.cpp:16:0:
../bitsyTypes.h:30:3: note: candidate: Constant::Constant(float)
   Constant( float _f ) : f(_f), type(VarType::Float){}
   ^~~~~~~~
../bitsyTypes.h:29:3: note: candidate: Constant::Constant(int32_t)
   Constant( int32_t _i ) : i(_i), type(VarType::Integer){}
   ^~~~~~~~
../main.cpp: In function 'bool window(int, int)':
../main.cpp:72:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
In file included from ../PokittoLib/Pokitto.h:50:0,
                 from ../main.cpp:2:
../PokittoLib/POKITTO_HW/PokittoEEPROM.h: At global scope:
../PokittoLib/POKITTO_HW/PokittoEEPROM.h:144:20: warning: 'EEPROM' defined but not used [-Wunused-variable]
 static EEPROMClass EEPROM;
                    ^~~~~~
In file included from ../PokittoLib/POKITTO_CORE/PokittoGlobs.h:48:0,
                 from ../PokittoLib/POKITTO_CORE/PokittoDisplay.h:73,
                 from ../PokittoLib/POKITTO_CORE/PokittoCore.h:57,
                 from ../PokittoLib/Pokitto.h:41,
                 from ../main.cpp:2:
../PokittoLib/POKITTO_HW/HWLCD.h:146:13: warning: 'void Pokitto::setup_gpio()' defined but not used [-Wunused-function]
 static void setup_gpio()
             ^~~~~~~~~~
make[1]: *** [main.o] Error 1
make: *** [all] Error 2
